--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:description" content="week5多頁式設計">
     <meta property="og:site_name" content="甜點電商">
     <meta property="og:locale" content="zh_TW">
+    <link rel="shortcut icon" href="images/shorcut-logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.min.css">
@@ -36,7 +37,7 @@
 
         <div class="p-products">
             <div class="p-menu">
-                <h2 class="p-menu-category">甜點類別</h2>
+                <h2 class="p-menu-category" data-aos="fade-right">甜點類別</h2>
                 <ul>
                     <li class="p-menu-selected" data-aos="fade-right"><a href="#">所有甜點（48）</a></li>
                     <li class="p-menu-item" data-aos="fade-right"><a href="#">本日精選（10）</a></li>
