--- a/payment-success.html
+++ b/payment-success.html
@@ -9,6 +9,7 @@
   <meta property="og:description" content="week5多頁式設計">
   <meta property="og:site_name" content="甜點電商">
   <meta property="og:locale" content="zh_TW">
+  <link rel="shortcut icon" href="images/shorcut-logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.min.css">
@@ -29,7 +30,7 @@
       </ul>
       <a class="l-header-cart" href="checkout-invoice.html"><i class="fas fa-shopping-cart"></i></a>
     </div>
-    <div class="p-paymentSuccess">
+    <div class="p-paymentSuccess" data-aos="zoom-in-up">
       <ul class="p-progressBar-3">
         <li><i class="fas fa-check-circle"></i></li>
         <li><i class="fas fa-check-circle"></i></li>
