update shortcut icon

--- a/checkout-invoice.html
+++ b/checkout-invoice.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="week5多頁式設計">
   <meta property="og:site_name" content="甜點電商">
   <meta property="og:locale" content="zh_TW">
-  <link rel="shortcut icon" href="images/shorcut-logo.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="images/shortcut-logo.svg" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.min.css">
