update taxID type

--- a/checkout-invoice.html
+++ b/checkout-invoice.html
@@ -54,7 +54,7 @@
             <label for="email">電子郵件信箱</label>
             <input id="email" type="email" placeholder="example@email.com">
             <label for="taxID1">統一編號（選填）</label>
-            <input id="taxID1" type="text" placeholder="12345678">
+            <input id="taxID1" type="number" placeholder="12345678">
           </div>
           <div class="p-postInvoiceForm">
             <div class="p-postInvoiceForm-header">
@@ -78,7 +78,7 @@
             </div>
             <input id="address" type="text" placeholder="幸福路 520 號">
             <label for="taxID2">統一編號（選填）</label>
-            <input id="taxID2" type="text" placeholder="12345678">
+            <input id="taxID2" type="number" placeholder="12345678">
           </div>
         </form>
         <a class="p-checkout-btn" href="payment-success.html">確認結帳</a>
