--- a/checkout-invoice.html
+++ b/checkout-invoice.html
@@ -20,12 +20,12 @@
     <div class="l-header">
       <button class="l-header-bars"><i class="fas fa-bars"></i></button>
       <h1 class="l-header-logo">
-        <a class="l-header-logo-pc" href="#">logo</a>
-        <a class="l-header-logo-mobile" href="#">logo</a>
+        <a class="l-header-logo-pc" href="index.html">logo</a>
+        <a class="l-header-logo-mobile" href="index.html">logo</a>
       </h1>
       <ul class="l-header-nav">
-        <li><a class="l-header-nav-links" href="#">首頁</a></li>
-        <li><a class="l-header-nav-links" href="#">甜點</a></li>
+        <li><a class="l-header-nav-links" href="index.html">首頁</a></li>
+        <li><a class="l-header-nav-links" href="index.html">甜點</a></li>
         <li><a class="l-header-nav-links" href="#">登入</a></li>
       </ul>
       <a class="l-header-cart" href="checkout-invoice.html"><i class="fas fa-shopping-cart"></i></a>
